src/tests/snapshots/fern__tests__parser__parse_conjunction.snap
---
source: src/tests/parser.rs
expression: nodes
---
[
    Match(
        Node {
            class: CmdList {
                elements: [
                    ConjunctNode {
                        cmd: Node {
                            class: Pipeline {
                                cmds: [
                                    Node {
                                        class: Command {
                                            assignments: [],
                                            argv: [
                                                Tk {
                                                    class: Str,
                                                    err_span: None,
                                                    err: Null,
                                                    span: Span {
                                                        range: 0..4,
                                                        source: "echo foo && echo bar",
                                                    },
                                                    flags: TkFlags(
                                                        IS_CMD,
                                                    ),
                                                },
                                                Tk {
                                                    class: Str,
                                                    err_span: None,
                                                    err: Null,
                                                    span: Span {
                                                        range: 5..8,
                                                        source: "echo foo && echo bar",
                                                    },
                                                    flags: TkFlags(
                                                        0x0,
                                                    ),
                                                },
                                            ],
                                        },
                                        flags: NdFlags(
                                            0x0,
                                        ),
                                        redirs: [],
                                        tokens: [
                                            Tk {
                                                class: Str,
                                                err_span: None,
                                                err: Null,
                                                span: Span {
                                                    range: 0..4,
                                                    source: "echo foo && echo bar",
                                                },
                                                flags: TkFlags(
                                                    IS_CMD,
                                                ),
                                            },
                                            Tk {
                                                class: Str,
                                                err_span: None,
                                                err: Null,
                                                span: Span {
                                                    range: 5..8,
                                                    source: "echo foo && echo bar",
                                                },
                                                flags: TkFlags(
                                                    0x0,
                                                ),
                                            },
                                        ],
                                    },
                                ],
                                pipe_err: false,
                            },
                            flags: NdFlags(
                                0x0,
                            ),
                            redirs: [],
                            tokens: [
                                Tk {
                                    class: Str,
                                    err_span: None,
                                    err: Null,
                                    span: Span {
                                        range: 0..4,
                                        source: "echo foo && echo bar",
                                    },
                                    flags: TkFlags(
                                        IS_CMD,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    err_span: None,
                                    err: Null,
                                    span: Span {
                                        range: 5..8,
                                        source: "echo foo && echo bar",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                            ],
                        },
                        operator: And,
                    },
                    ConjunctNode {
                        cmd: Node {
                            class: Pipeline {
                                cmds: [
                                    Node {
                                        class: Command {
                                            assignments: [],
                                            argv: [
                                                Tk {
                                                    class: Str,
                                                    err_span: None,
                                                    err: Null,
                                                    span: Span {
                                                        range: 12..16,
                                                        source: "echo foo && echo bar",
                                                    },
                                                    flags: TkFlags(
                                                        IS_CMD,
                                                    ),
                                                },
                                                Tk {
                                                    class: Str,
                                                    err_span: None,
                                                    err: Null,
                                                    span: Span {
                                                        range: 17..20,
                                                        source: "echo foo && echo bar",
                                                    },
                                                    flags: TkFlags(
                                                        0x0,
                                                    ),
                                                },
                                            ],
                                        },
                                        flags: NdFlags(
                                            0x0,
                                        ),
                                        redirs: [],
                                        tokens: [
                                            Tk {
                                                class: Str,
                                                err_span: None,
                                                err: Null,
                                                span: Span {
                                                    range: 12..16,
                                                    source: "echo foo && echo bar",
                                                },
                                                flags: TkFlags(
                                                    IS_CMD,
                                                ),
                                            },
                                            Tk {
                                                class: Str,
                                                err_span: None,
                                                err: Null,
                                                span: Span {
                                                    range: 17..20,
                                                    source: "echo foo && echo bar",
                                                },
                                                flags: TkFlags(
                                                    0x0,
                                                ),
                                            },
                                        ],
                                    },
                                ],
                                pipe_err: false,
                            },
                            flags: NdFlags(
                                0x0,
                            ),
                            redirs: [],
                            tokens: [
                                Tk {
                                    class: Str,
                                    err_span: None,
                                    err: Null,
                                    span: Span {
                                        range: 12..16,
                                        source: "echo foo && echo bar",
                                    },
                                    flags: TkFlags(
                                        IS_CMD,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    err_span: None,
                                    err: Null,
                                    span: Span {
                                        range: 17..20,
                                        source: "echo foo && echo bar",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                            ],
                        },
                        operator: Null,
                    },
                ],
            },
            flags: NdFlags(
                0x0,
            ),
            redirs: [],
            tokens: [
                Tk {
                    class: Str,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 0..4,
                        source: "echo foo && echo bar",
                    },
                    flags: TkFlags(
                        IS_CMD,
                    ),
                },
                Tk {
                    class: Str,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 5..8,
                        source: "echo foo && echo bar",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
                Tk {
                    class: And,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 9..11,
                        source: "echo foo && echo bar",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
                Tk {
                    class: Str,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 12..16,
                        source: "echo foo && echo bar",
                    },
                    flags: TkFlags(
                        IS_CMD,
                    ),
                },
                Tk {
                    class: Str,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 17..20,
                        source: "echo foo && echo bar",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
            ],
        },
    ),
]
