src/tests/snapshots/fern__tests__parser__parse_loop_multiline.snap
---
source: src/tests/parser.rs
expression: nodes
---
[
    Ok(
        Node {
            class: CmdList {
                elements: [
                    ConjunctNode {
                        cmd: Node {
                            class: LoopNode {
                                kind: Until,
                                cond_node: CondNode {
                                    cond: Node {
                                        class: Pipeline {
                                            cmds: [
                                                Node {
                                                    class: Command {
                                                        assignments: [],
                                                        argv: [
                                                            Tk {
                                                                class: Str,
                                                                span: Span {
                                                                    range: 7..10,
                                                                    source: "\nuntil foo; do\n\tbar\ndone",
                                                                },
                                                                flags: TkFlags(
                                                                    IS_CMD,
                                                                ),
                                                            },
                                                        ],
                                                    },
                                                    flags: NdFlags(
                                                        0x0,
                                                    ),
                                                    redirs: [],
                                                    tokens: [
                                                        Tk {
                                                            class: Str,
                                                            span: Span {
                                                                range: 7..10,
                                                                source: "\nuntil foo; do\n\tbar\ndone",
                                                            },
                                                            flags: TkFlags(
                                                                IS_CMD,
                                                            ),
                                                        },
                                                        Tk {
                                                            class: Sep,
                                                            span: Span {
                                                                range: 10..12,
                                                                source: "\nuntil foo; do\n\tbar\ndone",
                                                            },
                                                            flags: TkFlags(
                                                                0x0,
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ],
                                            pipe_err: false,
                                        },
                                        flags: NdFlags(
                                            0x0,
                                        ),
                                        redirs: [],
                                        tokens: [
                                            Tk {
                                                class: Str,
                                                span: Span {
                                                    range: 7..10,
                                                    source: "\nuntil foo; do\n\tbar\ndone",
                                                },
                                                flags: TkFlags(
                                                    IS_CMD,
                                                ),
                                            },
                                            Tk {
                                                class: Sep,
                                                span: Span {
                                                    range: 10..12,
                                                    source: "\nuntil foo; do\n\tbar\ndone",
                                                },
                                                flags: TkFlags(
                                                    0x0,
                                                ),
                                            },
                                        ],
                                    },
                                    body: [
                                        Node {
                                            class: Pipeline {
                                                cmds: [
                                                    Node {
                                                        class: Command {
                                                            assignments: [],
                                                            argv: [
                                                                Tk {
                                                                    class: Str,
                                                                    span: Span {
                                                                        range: 16..19,
                                                                        source: "\nuntil foo; do\n\tbar\ndone",
                                                                    },
                                                                    flags: TkFlags(
                                                                        IS_CMD,
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                        flags: NdFlags(
                                                            0x0,
                                                        ),
                                                        redirs: [],
                                                        tokens: [
                                                            Tk {
                                                                class: Str,
                                                                span: Span {
                                                                    range: 16..19,
                                                                    source: "\nuntil foo; do\n\tbar\ndone",
                                                                },
                                                                flags: TkFlags(
                                                                    IS_CMD,
                                                                ),
                                                            },
                                                            Tk {
                                                                class: Sep,
                                                                span: Span {
                                                                    range: 19..20,
                                                                    source: "\nuntil foo; do\n\tbar\ndone",
                                                                },
                                                                flags: TkFlags(
                                                                    0x0,
                                                                ),
                                                            },
                                                        ],
                                                    },
                                                ],
                                                pipe_err: false,
                                            },
                                            flags: NdFlags(
                                                0x0,
                                            ),
                                            redirs: [],
                                            tokens: [
                                                Tk {
                                                    class: Str,
                                                    span: Span {
                                                        range: 16..19,
                                                        source: "\nuntil foo; do\n\tbar\ndone",
                                                    },
                                                    flags: TkFlags(
                                                        IS_CMD,
                                                    ),
                                                },
                                                Tk {
                                                    class: Sep,
                                                    span: Span {
                                                        range: 19..20,
                                                        source: "\nuntil foo; do\n\tbar\ndone",
                                                    },
                                                    flags: TkFlags(
                                                        0x0,
                                                    ),
                                                },
                                            ],
                                        },
                                    ],
                                },
                            },
                            flags: NdFlags(
                                0x0,
                            ),
                            redirs: [],
                            tokens: [
                                Tk {
                                    class: Str,
                                    span: Span {
                                        range: 1..6,
                                        source: "\nuntil foo; do\n\tbar\ndone",
                                    },
                                    flags: TkFlags(
                                        KEYWORD,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    span: Span {
                                        range: 7..10,
                                        source: "\nuntil foo; do\n\tbar\ndone",
                                    },
                                    flags: TkFlags(
                                        IS_CMD,
                                    ),
                                },
                                Tk {
                                    class: Sep,
                                    span: Span {
                                        range: 10..12,
                                        source: "\nuntil foo; do\n\tbar\ndone",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    span: Span {
                                        range: 12..14,
                                        source: "\nuntil foo; do\n\tbar\ndone",
                                    },
                                    flags: TkFlags(
                                        KEYWORD,
                                    ),
                                },
                                Tk {
                                    class: Sep,
                                    span: Span {
                                        range: 14..16,
                                        source: "\nuntil foo; do\n\tbar\ndone",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    span: Span {
                                        range: 16..19,
                                        source: "\nuntil foo; do\n\tbar\ndone",
                                    },
                                    flags: TkFlags(
                                        IS_CMD,
                                    ),
                                },
                                Tk {
                                    class: Sep,
                                    span: Span {
                                        range: 19..20,
                                        source: "\nuntil foo; do\n\tbar\ndone",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    span: Span {
                                        range: 20..24,
                                        source: "\nuntil foo; do\n\tbar\ndone",
                                    },
                                    flags: TkFlags(
                                        KEYWORD,
                                    ),
                                },
                            ],
                        },
                        operator: Null,
                    },
                ],
            },
            flags: NdFlags(
                0x0,
            ),
            redirs: [],
            tokens: [
                Tk {
                    class: Str,
                    span: Span {
                        range: 1..6,
                        source: "\nuntil foo; do\n\tbar\ndone",
                    },
                    flags: TkFlags(
                        KEYWORD,
                    ),
                },
                Tk {
                    class: Str,
                    span: Span {
                        range: 7..10,
                        source: "\nuntil foo; do\n\tbar\ndone",
                    },
                    flags: TkFlags(
                        IS_CMD,
                    ),
                },
                Tk {
                    class: Sep,
                    span: Span {
                        range: 10..12,
                        source: "\nuntil foo; do\n\tbar\ndone",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
                Tk {
                    class: Str,
                    span: Span {
                        range: 12..14,
                        source: "\nuntil foo; do\n\tbar\ndone",
                    },
                    flags: TkFlags(
                        KEYWORD,
                    ),
                },
                Tk {
                    class: Sep,
                    span: Span {
                        range: 14..16,
                        source: "\nuntil foo; do\n\tbar\ndone",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
                Tk {
                    class: Str,
                    span: Span {
                        range: 16..19,
                        source: "\nuntil foo; do\n\tbar\ndone",
                    },
                    flags: TkFlags(
                        IS_CMD,
                    ),
                },
                Tk {
                    class: Sep,
                    span: Span {
                        range: 19..20,
                        source: "\nuntil foo; do\n\tbar\ndone",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
                Tk {
                    class: Str,
                    span: Span {
                        range: 20..24,
                        source: "\nuntil foo; do\n\tbar\ndone",
                    },
                    flags: TkFlags(
                        KEYWORD,
                    ),
                },
            ],
        },
    ),
]
